finalizing OpenJDK 21 upgrade updating Jetty and other components (CONNECTORS-1779)